more tweaks